# miniot

./: .gitignore  CMakeLists.txt  CONFIGURATION.md  GITHUB_OTA_SETUP.md  README.md  SECURITY_AUDIT.md  get_version.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: build-and-release.yml
main/: CMakeLists.txt  main.c  version.h.in
main/components/dns_server/: CMakeLists.txt  dns_server.c  dns_server.h
main/components/mdns_service/: CMakeLists.txt  mdns_service.c  mdns_service.h
main/components/nvs_storage/: CMakeLists.txt  nvs_storage.c  nvs_storage.h
main/components/ota_manager/: CmakeLists.txt  ota_manager.c  ota_manager.h
main/components/web_server/: CMakeLists.txt  web_server.c  web_server.h
main/components/web_server/certs/: server_cert.pem  server_key.pem
main/components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
